Skip enunciate=true

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -588,12 +588,12 @@
                         </overlay>
                     </overlays>
 
-                    <webResources>
-                        <resource>
-                            <directory>${project.build.directory}/api/v2/apidocs/ui</directory>
-                            <targetPath>apidocs</targetPath>
-                        </resource>
-                    </webResources>
+<!--                    <webResources>-->
+<!--                        <resource>-->
+<!--                            <directory>${project.build.directory}/api/v2/apidocs/ui</directory>-->
+<!--                            <targetPath>apidocs</targetPath>-->
+<!--                        </resource>-->
+<!--                    </webResources>-->
 
                     <archive>
                         <manifest>
