--- a/pom.xml
+++ b/pom.xml
@@ -868,12 +868,12 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>oracleReleases</id>
-            <name>Oracle Released Java Packages</name>
-            <url>http://download.oracle.com/maven</url>
-            <layout>default</layout>
-        </repository>
+<!--        <repository>-->
+<!--            <id>oracleReleases</id>-->
+<!--            <name>Oracle Released Java Packages</name>-->
+<!--            <url>http://download.oracle.com/maven</url>-->
+<!--            <layout>default</layout>-->
+<!--        </repository>-->
         <repository>
             <id>atlassian-public</id>
             <url>https://maven.atlassian.com/repository/public</url>
@@ -887,10 +887,10 @@
                 <checksumPolicy>warn</checksumPolicy>
             </releases>
         </repository>
-        <repository>
-            <id>clojars.org</id>
-            <url>http://clojars.org/repo</url>
-        </repository>
+<!--        <repository>-->
+<!--            <id>clojars.org</id>-->
+<!--            <url>http://clojars.org/repo</url>-->
+<!--        </repository>-->
     </repositories>
 
     <dependencyManagement>
