--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -46,6 +46,12 @@
 
         <dependency>
             <groupId>org.apache.atlas</groupId>
+            <artifactId>auth-agents-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
             <artifactId>atlas-server-api</artifactId>
         </dependency>
 
