--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -315,9 +315,11 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
-
-        <!--<artifactId>client-keycloak</artifactId>
-        <version>3.0.0-SNAPSHOT</version>-->
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
+            <artifactId>client-keycloak</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
