--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -126,7 +126,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          branch: main
+          branch: killranger
           author_name: atlan-ci
           author_email: it@atlan.com
           message: '${{ github.event.repository.name }}'
