Breakup Ranger: Ranger admin rest client class property

--- a/atlas-hub/pre-conf/ranger/install/conf.templates/enable/ranger-atlas-security-changes.cfg
+++ b/atlas-hub/pre-conf/ranger/install/conf.templates/enable/ranger-atlas-security-changes.cfg
@@ -18,7 +18,7 @@
 #
 ranger.plugin.atlas.service.name %REPOSITORY_NAME% mod create-if-not-exists
 
-ranger.plugin.atlas.policy.source.impl org.apache.ranger.admin.client.RangerAdminRESTClient mod create-if-not-exists
+ranger.plugin.atlas.policy.source.impl org.apache.atlas.ranger.admin.client.RangerAdminRESTClient mod create-if-not-exists
 
 ranger.plugin.atlas.policy.rest.url             %POLICY_MGR_URL%                        mod create-if-not-exists
 ranger.plugin.atlas.policy.rest.ssl.config.file /etc/atlas/conf/ranger-policymgr-ssl.xml mod create-if-not-exists
