Breakup Ranger: Remove jsr311-api jar from lib

--- a/client-keycloak/pom.xml
+++ b/client-keycloak/pom.xml
@@ -34,7 +34,13 @@
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-admin-client</artifactId>
-            <version>18.0.2</version>
+            <version>20.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>jsr311-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
