--- a/atlas-hub/pre-conf/ranger/install/conf.templates/enable/atlas-atlas-security-changes.cfg
+++ b/atlas-hub/pre-conf/ranger/install/conf.templates/enable/atlas-atlas-security-changes.cfg
@@ -16,14 +16,8 @@
 # Change the original policy parameter to work with policy manager based.
 # 
 #
-ranger.plugin.atlas.service.name %REPOSITORY_NAME% mod create-if-not-exists
+atlas.plugin.atlas.service.name %REPOSITORY_NAME% mod create-if-not-exists
 
-ranger.plugin.atlas.policy.source.impl org.apache.ranger.admin.client.RangerAdminRESTClient mod create-if-not-exists
+atlas.plugin.atlas.policy.rest.url             %POLICY_MGR_URL%                        mod create-if-not-exists
 
-ranger.plugin.atlas.policy.rest.url             %POLICY_MGR_URL%                        mod create-if-not-exists
-ranger.plugin.atlas.policy.rest.ssl.config.file /etc/atlas/conf/ranger-policymgr-ssl.xml mod create-if-not-exists
-ranger.plugin.atlas.policy.pollIntervalMs       30000                                   mod create-if-not-exists
-ranger.plugin.atlas.policy.cache.dir            %POLICY_CACHE_FILE_PATH%                mod create-if-not-exists
-ranger.plugin.atlas.policy.rest.client.connection.timeoutMs 120000				       mod create-if-not-exists
-ranger.plugin.atlas.policy.rest.client.read.timeoutMs	   30000					   mod create-if-not-exists
 
