--- a/auth-agents-common/pom.xml
+++ b/auth-agents-common/pom.xml
@@ -24,9 +24,11 @@
         <groupId>org.apache.atlas</groupId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
+    <artifactId>auth-agents-common</artifactId>
+    <name>Apache Atlas Authorization common</name>
+    <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>auth-agents-common</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -118,12 +120,63 @@
         </dependency>
 
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp3.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-jaxrs</artifactId>
             <version>1.9.13</version>
         </dependency>
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <minimizeJar>true</minimizeJar>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>**/*.md</exclude>
+                                        <exclude>**/*.txt</exclude>
+                                        <exclude>**/*.yml</exclude>
+                                        <exclude>**/*.properties</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                            <artifactSet>
+                                <excludes>
+                                    <exclude>org.slf4j:*</exclude>
+                                    <exclude>com.google.api.grpc:*</exclude>
+                                    <exclude>org.janusgraph:*</exclude>
+                                    <exclude>com.google.protobuf:*</exclude>
+                                    <exclude>com.squareup.okhttp:*</exclude>
+                                    <exclude>org.apache.lucene:*</exclude>
+                                    <exclude>org.apache.hbase:*</exclude>
+                                    <exclude>com.datastax.oss:*</exclude>
+                                    <exclude>org.apache.tinkerpop</exclude>
+                                    <exclude>org.keycloak:*</exclude>
+                                </excludes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
