--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+        registry: ghcr.io
+        username: $GITHUB_ACTOR
+        password: ${{ secrets.my_pat }}
 
     steps:
       - uses: actions/checkout@v2
@@ -47,27 +51,18 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/build.sh') }}
           restore-keys: ${{ runner.os }}-m2
 
+      - name: Build with Maven
+        run: chmod +x ./build.sh && ./build.sh
+
       - name: Get branch name
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: get_branch
-
-      - name: Build with Maven
-        run: |
-          branch_name=${{ steps.get_branch.outputs.branch }} 
-          if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'lineageondemand' ]]
-          then
-              echo "build without dashboard"
-              chmod +x ./build.sh && ./build.sh build_without_dashboard
-          else
-              echo "build with dashboard"
-              chmod +x ./build.sh && ./build.sh
-          fi
 
       - run:   echo "REPOSITORY_NAME=`echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//"`" >> $GITHUB_ENV
         shell: bash
 
       - name: Get version tag
-        run: echo "##[set-output name=version;]$(echo `git ls-remote https://${{ secrets.my_pat }}@github.com/atlanhq/${REPOSITORY_NAME}.git ${{ steps.get_branch.outputs.branch }} | awk '{ print $1}' | cut -c1-7`)abcd"
+        run: echo "##[set-output name=version;]$(echo `git ls-remote https://${{ secrets.my_pat }}@github.com/atlanhq/${REPOSITORY_NAME}.git refs/heads/${{ steps.get_branch.outputs.branch }} | awk '{ print $1}' | cut -c1-7`)abcd"
         id: get_version
 
       - name: Set up Buildx 
@@ -94,11 +89,10 @@ jobs:
           tags: |
             ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:latest
             ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:${{ steps.get_version.outputs.version }}
-
       - name: Scan Image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ubuntu:18.04'
+          image-ref: 'ubuntu:23.04'
           vuln-type: 'os,library'
           format: 'sarif'
           output: 'trivy-image-results.sarif'
@@ -111,7 +105,7 @@ jobs:
       - name: Check out into atlan repo
         uses: actions/checkout@v2
         with:
-          ref: main
+          ref: ${{ steps.get_branch.outputs.branch }}
           repository: atlanhq/atlan
           token: ${{ secrets.my_pat }}
 
@@ -121,13 +115,12 @@ jobs:
           echo "- ${{ github.event.head_commit.message }}">>gitlog/${{ github.event.repository.name }}.txt
           chmod +x ./scripts/create_changelog.sh
           ./scripts/create_changelog.sh
-
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          branch: main
+          branch: ${{ steps.get_branch.outputs.branch }}
           author_name: atlan-ci
           author_email: it@atlan.com
           message: '${{ github.event.repository.name }}'
           default_author: user_info
-          push: origin main
+          push: origin ${{ steps.get_branch.outputs.branch }}
