keycloak common exclude

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -522,6 +522,10 @@
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-core</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.keycloak</groupId>
+                    <artifactId>keycloak-common</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
