--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -310,6 +310,7 @@
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
 
         <dependency>
