--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -300,11 +300,13 @@
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-core</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
 
         <dependency>
@@ -406,6 +408,7 @@
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-servlet</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
         <!-- Required for Spring configuration processing -->
         <dependency>
