--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -377,6 +377,21 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
+
+                <dependency>
+                    <groupId>com.networknt</groupId>
+                    <artifactId>json-schema-validator</artifactId>
+                    <version>1.0.87</version>
+
+                    <!-- Only required for versions < 1.0.82. See README.md -->
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.apache.commons</groupId>
+                            <artifactId>commons-lang3</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+
             </dependencies>
         </profile>
 
