--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -321,6 +321,12 @@
             <artifactId>client-keycloak</artifactId>
             <version>3.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
+            <artifactId>auth-agents-common</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
