--- a/pom.xml
+++ b/pom.xml
@@ -825,6 +825,7 @@
 
         <module>distro</module>
         <module>atlas-examples</module>
+        <module>auth-agents-common-temp</module>
     </modules>
 
     <repositories>
