fix: revert the branch action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,8 @@ on:
       - beta
       - development
       - master
-      - plt-474-cve-fix
+      - staging
+      - lineageondemand
 
 jobs:
   build:
