--- a/auth-agents-common/pom.xml
+++ b/auth-agents-common/pom.xml
@@ -51,6 +51,12 @@
 
         <dependency>
             <groupId>org.apache.atlas</groupId>
+            <artifactId>auth-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
             <artifactId>client-keycloak</artifactId>
             <version>${project.version}</version>
         </dependency>
