--- a/auth-agents-common/pom.xml
+++ b/auth-agents-common/pom.xml
@@ -55,6 +55,13 @@
             <version>${project.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
+            <artifactId>auth-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.atlas</groupId>
             <artifactId>auth-audits</artifactId>
