Undo workflow change

--- a/.github/workflows/chart-release-dispatcher.yaml
+++ b/.github/workflows/chart-release-dispatcher.yaml
@@ -7,6 +7,7 @@ on:
     branches:
       - master
       - beta
+      - staging
     types:
       - completed
 
@@ -24,13 +25,6 @@ jobs:
         id: extract_branch
         run: |
           echo "branch=${{ github.event.workflow_run.head_branch }}" >> $GITHUB_OUTPUT
-
-      - name: Extract Repository Name
-        id: extract_repo_name
-        run: |
-          repo_name=$(basename $GITHUB_REPOSITORY)
-          echo "repo_name=${repo_name}" >> $GITHUB_OUTPUT
-
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v2
         with:
@@ -40,7 +34,7 @@ jobs:
           client-payload: |-
             {
               "repo": {
-                "name": "${{ steps.extract_repo_name.outputs.repo_name }}",
+                "name": "${{ github.repository }}",
                 "branch": "${{ steps.extract_branch.outputs.branch }}"
               }
             }
