feat: initial commit with working JG upgrade

--- a/graphdb/janus/pom.xml
+++ b/graphdb/janus/pom.xml
@@ -139,6 +139,10 @@
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>cassandra-hadoop-util</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
