--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ on:
       - master
       - staging
       - lineageondemand
-      - featPolicyManagerAuthPolicies
+      - arpitpmauth
 
 jobs:
   build:
