--- a/.github/workflows/trivy-docker-scan.yml
+++ b/.github/workflows/trivy-docker-scan.yml
@@ -7,6 +7,7 @@ on:
       - development
       - master
       - lineageondemand
+      - test-docker-test
   
 
 jobs:
@@ -18,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Trivy vulnerability scanner in IaC mode
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.14.0
         with:
           scan-type: 'config'
           scan-ref: './Dockerfile'
