--- a/graphdb/janus-hbase2/pom.xml
+++ b/graphdb/janus-hbase2/pom.xml
@@ -98,6 +98,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
