--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -90,7 +90,7 @@ jobs:
         with:
           registry: ghcr.io
           username: $GITHUB_ACTOR
-          password: ${{ secrets.org_pat_github }}
+          password: ${{ secrets.my_pat }}
 
       - name: Build and push
         id: docker_build
