--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -86,11 +86,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to GitHub Registry
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: $GITHUB_ACTOR
-          password: ${{ secrets.my_pat }}
+          password: ${{ secrets.MY_PAT }}
 
       - name: Build and push
         id: docker_build
