--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,7 +89,7 @@ jobs:
         uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: atlan-ci
           password: ${{ secrets.ORG_PAT_GITHUB }}
 
       - name: Build and push
