--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,8 +89,8 @@ jobs:
         uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
-          username: atlan-ci
-          password: ${{ secrets.ORG_PAT_GITHUB }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         id: docker_build
