--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -90,7 +90,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.ORG_PAT_GITHUB }}
+          password: 
 
       - name: Build and push
         id: docker_build
