--- a/pom.xml
+++ b/pom.xml
@@ -1718,6 +1718,12 @@
             <version>2.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
