--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,7 +49,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Get branch name
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | awk '{print tolower($0)}')"
         id: get_branch
 
       - name: Create Maven Settings
@@ -64,7 +64,7 @@ jobs:
 
       - name: Build with Maven
         run: |
-          branch_name=${{ steps.get_branch.outputs.branch }} 
+          branch_name='${{ steps.get_branch.outputs.branch }}'
           if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'lineageondemand' ]]
           then
               echo "build without dashboard"
