--- a/intg/src/test/resources/atlas-application.properties
+++ b/intg/src/test/resources/atlas-application.properties
@@ -43,7 +43,9 @@ atlas.rest.address=http://localhost:31000
 atlas.graphdb.backend=${graphdb.backend.impl}
 
 # Graph Storage
-atlas.graph.storage.backend=${graph.storage.backend}
+#atlas.graph.storage.backend=${graph.storage.backend}
+atlas.graph.storage.backend=cql
+atlas.index.recovery.enable=false
 
 # Entity repository implementation
 atlas.EntityAuditRepository.impl=${entity.repository.impl}
@@ -71,7 +73,7 @@ atlas.graph.index.search.elasticsearch.create.sleep=2000
 # Solr cloud mode properties
 atlas.graph.index.search.solr.mode=cloud
 atlas.graph.index.search.solr.zookeeper-url=${solr.zk.address}
-atlas.graph.index.search.solr.embedded=${tests.solr.embedded}
+atlas.graph.index.search.solr.embedded=false
 atlas.graph.index.search.max-result-set-size=150
 
 
