PLT-2568 do gzip only to lineage endpoint

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -122,7 +122,7 @@
 
     <filter-mapping>
         <filter-name>gzipFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/api/atlas/*/lineage/*</url-pattern>
     </filter-mapping>
 
     <listener>
