PLT-2568 add url mapping for v1 and v2

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -122,7 +122,10 @@
 
     <filter-mapping>
         <filter-name>gzipFilter</filter-name>
-        <url-pattern>/api/atlas/*/lineage/*</url-pattern>
+        <url-pattern>/api/atlas/v2/lineage</url-pattern>
+        <url-pattern>/api/atlas/v2/lineage/*</url-pattern>
+        <url-pattern>/api/atlas/v1/lineage</url-pattern>
+        <url-pattern>/api/atlas/v1/lineage/*</url-pattern>
     </filter-mapping>
 
     <listener>
