--- a/common/pom.xml
+++ b/common/pom.xml
@@ -190,6 +190,31 @@
             <artifactId>netty-transport-native-unix-common</artifactId>
             <version>${netty4.version}</version>
         </dependency>
+
+        <!-- OpenTelemetry core -->
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk</artifactId>
+            <version>1.42.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-otlp</artifactId>
+            <version>1.42.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry.semconv</groupId>
+            <artifactId>opentelemetry-semconv</artifactId>
+            <version>1.27.0-alpha</version>
+        </dependency>
+
+        <!-- OpenTelemetry log4j / logback appenders -->
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-log4j-appender-2.17</artifactId>
+            <version>2.8.0-alpha</version>
+        </dependency>
     </dependencies>
 
     <build>
